# Data-Structs

./: .gitignore  Notes.md
Algorithms/: CMakeLists.txt
Algorithms/Recursion/: TypesOfRecursion.md  headRecursion.cpp  tailRecursion.cpp  treeRecursion.cpp
structsCPP/: CMakeLists.txt
structsCPP/DoublyLinkedList/: DLinkedList.cpp  DLinkedList.hpp  main.cpp
structsCPP/Graphs/: Graph.cpp  Graph.hpp  main.cpp
structsCPP/HashTable/: HashTable.cpp  main.cpp
structsCPP/LinkedList/: LinkedList.cpp  LinkedList.h  main.cpp
structsCPP/Node/: HashNode.cpp  HashNode.hpp  Node.cpp  Node.h  NodeD.cpp  NodeD.hpp  TreeNode.cpp  TreeNode.hpp
structsCPP/PointersAndClasses/: class_ex1.cpp
structsCPP/Section_11_Stacks_and_Queues/: Queue.cpp  main.cpp
structsCPP/Section_14_Trees/: BinarySearchTree.cpp
structsCPP/Section_16_HashTable/: HashTable.hpp
structsCPP/Section_19_Graphs/: Graph.cpp
structsCPP/Section_4_PointersAndClasses/: CMakeLists.txt  classes.ixx  main.cpp  pointer_ex1.cpp  pointers.ixx
structsCPP/Section_5_LinkedList/: CMakeLists.txt  CMakePresets.json  LinkedList.ixx  Node.ixx  main.cpp
structsCPP/Section_5_LinkedList/OldImplementation/: LinkedList.cpp  LinkedList.h  main.cpp
structsCPP/Section_8_DoublyLinkedList/: DLinkedList.hpp
structsCPP/Stack/: Queue.cpp  Queue.hpp  Stack.cpp  Stack.hpp  main.cpp
structsCPP/Trees/: BinarySearchTree.cpp  BinarySearchTree.hpp  main.cpp
structsPYTHON/Classes & Pointers/: classes_ex.py  pointer_ex.py
structsPYTHON/HashTable/: ht_main.py
structsPYTHON/HashTable/HashTable/: HashTable.py
structsPYTHON/Linked List/: LL_Notes.md  LinkedList.py
structsPYTHON/Lists/: GeneralWorkingOfLL.py  dll_main.py  ll_main.py  main.py
structsPYTHON/Lists/DoublyLinkedList/: DLL.py
structsPYTHON/Lists/LinkedList/: LL_Notes.md  LinkedList.py
structsPYTHON/Stack/: queue_main.py  stack_main.py
structsPYTHON/Stack/Queue/: QueueStack.py
structsPYTHON/Stack/Stack/: Stack.py
structsPYTHON/Trees/: bst_main.py
structsPYTHON/Trees/BST/: BinarySearchTree.py
