CMAKE_MINIMUM_REQUIRED(VERSION 3.31)

PROJECT(pclasses VERSION 1.0.0 LANGUAGES CXX)

# FOR C++23
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_SCAN_FOR_MODULES ON)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_SOURCES(${PROJECT_NAME} PUBLIC FILE_SET CXX_MODULES FILES
        pointers.ixx
        classes.ixx
)
