CMAKE_MINIMUM_REQUIRED(VERSION 3.31)

PROJECT(linkedListMain VERSION 2.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_SCAN_FOR_MODULES ON)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_SOURCES(${PROJECT_NAME} PUBLIC FILE_SET CXX_MODULES FILES
        Node.ixx
        LinkedList.ixx
)